[package]
name = "gcs-agent"
version = "0.1.0"
authors = ["Richard Maw <richard.maw@gmail.com>"]
edition = "2018"
default-run = "gcs-agent"

[workspace]
members = [
    "gcs",
    "gmtool_common",
]
exclude = [
    "webui"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
bincode = "*"
futures = "0.3.*"
gmtool-common = { path = "gmtool_common" }
http-types = "2.10.*"
notify = "5.0.0-pre.2"
tide = "0.16"
url = "2.2.*"
webbrowser = "0.5.5"

[dependencies.async-tungstenite]
version = "*"
features = ["async-std-runtime"]

[build-dependencies]
base64 = "*"
json = "*"
