[package]
name = "gcs-agent"
version = "0.1.0"
authors = ["Richard Maw <richard.maw@gmail.com>"]
edition = "2018"
default-run = "gcs-agent"

[workspace]
members = [
    "gcs",
    "gmtool_common",
]
exclude = [
    "webui"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "*"
base64 = "*"
bincode = "*"
futures = "0.3.*"
gcs = { path = "gcs" }
gmtool-common = { path = "gmtool_common" }
hyper = { version = "0.14", features = ["full"] }
log = "*"
notify = "5.0.0-pre.6"
pin-project = "1.0"
pretty_env_logger = "*"
rand = "*"
serde_cbor = "*"
serde_json = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.2.*"
warp = "0.3"
warp-sessions = "1.0"
webbrowser = "0.5.5"

[build-dependencies]
base64 = "*"
json = "*"
