[package]
name = "webui"
version = "0.1.0"
authors = ["Richard Maw <richard.maw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
url = "*"
yew = "0.17.*"
wasm-bindgen = "0.2"
web-sys = "*"
