[package]
name = "webui"
version = "0.1.0"
authors = ["Richard Maw <richard.maw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bincode = "*"
gcs = { path = "../gcs" }
gmtool-common = { path = "../gmtool_common" }
serde_json = "*"
url = "*"
wasm-bindgen = "0.2"
web-sys = { version = "*", features = ["HtmlOptionElement", "HtmlSelectElement", "InputEvent"] }
yew = "0.17.*"
